--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.datasource.password=starlight
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.security.user.name=user
 spring.security.user.password=1234
+
+spring.datasource.initialization-mode=always
+spring.datasource.data=classpath:data.sql
