--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=starlight
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.security.user.name=user
