--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mustache</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
@@ -63,6 +59,20 @@
             <groupId>org.webjars</groupId>
             <artifactId>requirejs</artifactId>
             <version>2.3.6</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.webjars.bower/mustache -->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>mustache</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.webjars.bower/requirejs-plugins -->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>requirejs-plugins</artifactId>
+            <version>1.0.3</version>
         </dependency>
 
         <dependency>
