--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <version>2.3.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.webjars/momentjs -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>momentjs</artifactId>
+            <version>2.24.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.webjars.bower/requirejs-plugins -->
         <dependency>
             <groupId>org.webjars.bower</groupId>
